--- a/semana1/assets/css/styles.css
+++ b/semana1/assets/css/styles.css
@@ -5,6 +5,13 @@
     text-align: center;
 }
 
+.botao {
+    border-radius: 20px;
+    border: 2px solid black;
+    padding: 10px;
+    margin-top: 20px;
+}
+
 body {
     background-color: yellow;
 }
