--- a/semana1/assets/css/styles.css
+++ b/semana1/assets/css/styles.css
@@ -5,12 +5,18 @@
     text-align: center;
 }
 
+.background {
+    background-image: url("/semana1/assets/images/bg-text.webp");
+    margin: 0px;
+}
+
 .botao {
     border-radius: 20px;
     border: 2px solid black;
     padding: 10px;
     margin-top: 20px;
 }
+
 
 body {
     background-color: yellow;
