Ex 7 - Conteúdo externo

--- a/semana1/assets/css/styles.css
+++ b/semana1/assets/css/styles.css
@@ -17,6 +17,14 @@
     margin-top: 20px;
 }
 
+.titulo-video {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.descricaovideo {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: medium;
+}
 
 body {
     background-color: yellow;
