--- a/semana1/assets/css/styles.css
+++ b/semana1/assets/css/styles.css
@@ -26,6 +26,23 @@
     font-size: medium;
 }
 
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+    position: fixed; 
+    top: 0; 
+    width: 100%; 
+  }
+
+  .navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
 body {
     background-color: yellow;
 }
