--- a/semana1/assets/css/styles.css
+++ b/semana1/assets/css/styles.css
@@ -43,6 +43,13 @@
     text-decoration: none;
   }
 
+  .navbar a:hover {
+    background: orangered;
+    transition: 300ms;
+    transition-delay: 300ms;
+    color: black;
+  }
+
 body {
     background-color: yellow;
 }
