--- a/semana2/index.css
+++ b/semana2/index.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Ubuntu:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Play&display=swap');
+
 
 * {
     box-sizing: border-box;
@@ -55,3 +57,52 @@ button {
 button:hover {
     background-color: rgba(0, 136, 169, 0.8);
 }
+
+.evento {
+    text-align: center;
+}
+
+.evento h1 {
+    font-weight: 700;
+    color: white; 
+    padding: 30px;
+}
+
+.evento p {
+    padding: 10px;
+    font-family: 'Play', sans-serif;
+    color: rgb(255, 255, 255);
+    box-sizing: content-box;
+}
+
+.evento img {
+    width: 97%;
+    height: 380px;
+}
+
+.evento img:hover {
+    transition: all .2s ease;
+    width: 100%;
+    height: 400px;
+}
+
+.description {
+    text-align: center;
+    padding: 10px;
+    
+}
+
+.description p {
+    padding: 10px;
+    color: white;
+    font-family: 'Ubuntu', sans-serif;
+    
+}
+
+.description img {
+    width: 2%;
+    vertical-align: middle;
+    padding-right: 10px;
+    height: 2%;
+}
+
