--- a/semana2/stylecontato.css
+++ b/semana2/stylecontato.css
@@ -103,3 +103,13 @@ form {
     padding: 5px;
   }
   
+  .controdp p{
+    padding: 3px;
+    background-color: #5f605d60;
+}
+.rodape {
+    text-align: center;
+    color: white;
+    font-family: sans-serif ;
+    font-weight: 300;
+}
