--- a/semana3/style.css
+++ b/semana3/style.css
@@ -1,18 +1,88 @@
 body {
-    background-color: black;
-}
-h1{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: center;
-}
-h1,h2{
-    color: white;
-    text-align: center;
+    background-color: rgb(0, 0, 0);
+} 
+
+ul {
+    list-style-type: none;
 }
 
-ul{
-    list-style: none;
-    color: white;
+.container {
+    position: absolute;
+    width: 1600px;
+    height: 90px;
+    left: 0px;
+    top: 0px;
+    background-image: linear-gradient(rgb(4, 63, 130), rgb(2, 7, 58));
+}
+
+.convidadoslist {
+    position: relative;
+    left: auto;
+    text-align: center; 
+    font-family: 'Arial';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 30px;
+    color: #FFFFFF;
+}
+
+.camarotetext, .arquibancadatext, .pistatext{
+    position: relative;
     text-align: center;
-    font-size: 20px;
+    font-family: 'Arial';
+    font-style: bold;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;  
+    color: #ffffff;
+}
+
+.nomescamarote, .nomesarquibancada, .nomespista {
+    /* width: 153px; */
+    height: 190px;
+    left: 203px;
+    top: 157px;
+    font-family: 'Arial';
+    font-style: normal;
+    font-weight: 100;
+    font-size: 18px;
+    line-height: 20px;
+    color: #ffffff
+}
+
+.retanarquibancada {
+    box-sizing: border-box;
+    position: absolute;
+    width: 338px;
+    height: 600px;
+    left: 587px;
+    top: 109px;
+    background: #414040;
+    border: 6px solid rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.retancamarote {
+    box-sizing: border-box;
+    position: absolute;
+    width: 338px;
+    height: 600px;
+    left: 50px;
+    top: 109px;
+    background: #414040;
+    border: 6px solid rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.retanpista {
+    box-sizing: border-box;
+    position: absolute;
+    width: 338px;
+    height: 600px;
+    left: 1200px;
+    top: 109px;
+    background: #414040;
+    border: 6px solid rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
